# bagicoin

./: .gitignore  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libbagicoinconsensus.pc.in
.tx/: config
doc/man/: Makefile.am  bagicoin-cli.1  bagicoin-qt.1  bagicoin-tx.1  bagicoin-wallet.1  bagicoind.1  chaincoin-cli.1  chaincoin-qt.1  chaincoin-tx.1  chaincoin-wallet.1  chaincoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  bagicoin-cli-res.rc  bagicoin-cli.cpp  bagicoin-tx-res.rc  bagicoin-tx.cpp  bagicoin-wallet-res.rc  bagicoin-wallet.cpp  bagicoind-res.rc  bagicoind.cpp  banman.h  cachedb.cpp  cachedb.h  cachemap.h  cachemultimap.h  chain.h  chaincoin-cli.cpp  chaincoin-tx.cpp  chaincoin-wallet-res.rc  chaincoin-wallet.cpp  chaincoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  clientversion.cpp  clientversion.h  coins.h  compat.h  core_io.h  core_read.cpp  dbwrapper.cpp  hash.h  httprpc.cpp  httpserver.cpp  init.cpp  key_io.cpp  (+35 more)
src/bench/: bench_bagicoin.cpp  bench_chaincoin.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: params.h  tx_verify.h
src/crypto/: blake512.cpp  blake512.h  bmw512.cpp  bmw512.h  c11_types.h  common.h  cubehash512.cpp  cubehash512.h  echo512.cpp  echo512.h  groestl512.cpp  groestl512.h  jh512.cpp  jh512.h  keccak512.cpp  keccak512.h  luffa512.cpp  luffa512.h  shavite512.cpp  shavite512.h  simd512.cpp  simd512.h  skein512.cpp  skein512.h
src/interfaces/: chain.cpp  chain.h  modules.cpp  modules.h  node.cpp  node.h  wallet.cpp  wallet.h
src/modules/coinjoin/: coinjoin.cpp  coinjoin.h  coinjoin_analyzer.cpp  coinjoin_analyzer.h  coinjoin_server.cpp  coinjoin_server.h
src/modules/masternode/: activemasternode.cpp  activemasternode.h  masternode.cpp  masternode.h  masternode_config.cpp  masternode_config.h  masternode_man.cpp  masternode_man.h  masternode_payments.cpp  masternode_payments.h  masternode_sync.cpp  masternode_sync.h
src/modules/platform/: funding.cpp  funding.h  funding_classes.cpp  funding_classes.h  funding_exceptions.h  funding_object.cpp  funding_object.h  funding_validators.h  funding_vote.cpp  funding_vote.h  funding_votedb.h
src/modules/privatesend/: privatesend.cpp  privatesend.h  privatesend_server.cpp  privatesend_server.h
src/node/: transaction.cpp  transaction.h
src/policy/: fees.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: README.md  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  bagicoin.cpp  bagicoin.h  bagicoin.qrc  bagicoin_locale.qrc  bagicoinstrings.cpp  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  chaincoin.cpp  chaincoin.h  chaincoin.qrc  chaincoinstrings.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coinjoinconfig.cpp  coinjoinconfig.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  main.cpp  masternodetablemodel.h  masternodeview.h  modaloverlay.cpp  (+53 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  coinjoinconfig.ui  debugwindow.ui  helpmessagedialog.ui  masternodelist.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  proposaldialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bagicoin_ak.ts  bagicoin_ar.ts  bagicoin_bg.ts  bagicoin_bg_BG.ts  bagicoin_bn.ts  bagicoin_ca.ts  bagicoin_ca@valencia.ts  bagicoin_cs.ts  bagicoin_de.ts  bagicoin_de_AT.ts  bagicoin_de_DE.ts  bagicoin_eo.ts  bagicoin_es_419.ts  bagicoin_es_CL.ts  bagicoin_es_CO.ts  bagicoin_es_DO.ts  bagicoin_es_ES.ts  bagicoin_es_MX.ts  bagicoin_es_VE.ts  bagicoin_et.ts  bagicoin_fi.ts  bagicoin_fr_FR.ts  bagicoin_gl.ts  bagicoin_he_IL.ts  bagicoin_hr.ts  bagicoin_hu.ts  bagicoin_is.ts  bagicoin_ka.ts  bagicoin_kk_KZ.ts  bagicoin_km_KH.ts  bagicoin_ko.ts  bagicoin_lv_LV.ts  bagicoin_mk_MK.ts  bagicoin_ml.ts  bagicoin_mn.ts  bagicoin_mr_IN.ts  bagicoin_ms.ts  bagicoin_ms_MY.ts  bagicoin_my.ts  bagicoin_nb.ts  (+75 more)
src/qt/res/: bagicoin-qt-res.rc
src/qt/test/: addressbooktests.cpp  apptests.cpp  compattests.cpp  rpcnestedtests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  client.cpp  funding.cpp  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  util.cpp
src/script/: bagicoinconsensus.cpp  bagicoinconsensus.h  chaincoinconsensus.cpp  sign.cpp  sign.h  standard.h
src/support/: lockedpool.cpp
src/test/: README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  (+30 more)
src/test/data/: README.md  proposals-invalid.json  proposals-valid.json
src/util/: system.cpp  system.h  time.cpp  time.h
src/wallet/: coincontrol.cpp  coincontrol.h  coinjoin_client.cpp  coinjoin_client.h  coinselection.cpp  crypter.cpp  crypter.h  db.cpp  init.cpp  privatesend_client.cpp  privatesend_client.h  psctwallet.cpp  psctwallet.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  walletdb.cpp
src/zmq/: zmqconfig.h  zmqpublishnotifier.cpp
(+143 files in other folders)
